# photon-mosaic

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Snakefile  _datasets.csv  api_index.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: test_and_deploy.yml
_modules/: index.html
_modules/photon_mosaic/: cli.html  dataset_discovery.html  pathing.html  s2p_options.html  snakemake_utils.html
_modules/photon_mosaic/preprocessing/: contrast.html  derotation.html  noop.html
_modules/photon_mosaic/rules/: preprocessing.html  suite2p_run.html
_sources/: api_index.rst.txt  contributing.md.txt  index.md.txt
_sources/api/: photon_mosaic.cli.rst.txt  photon_mosaic.dataset_discovery.rst.txt  photon_mosaic.pathing.rst.txt  photon_mosaic.preprocessing.contrast.rst.txt  photon_mosaic.preprocessing.derotation.rst.txt  photon_mosaic.preprocessing.noop.rst.txt  photon_mosaic.rules.preprocessing.rst.txt  photon_mosaic.rules.suite2p_run.rst.txt  photon_mosaic.s2p_options.rst.txt  photon_mosaic.snakemake_utils.rst.txt
_sources/user_guide/: preprocessing.md.txt  snakemake_tutorial.md.txt
api/: photon_mosaic.cli.html  photon_mosaic.dataset_discovery.html  photon_mosaic.pathing.html  photon_mosaic.preprocessing.contrast.html  photon_mosaic.preprocessing.derotation.html  photon_mosaic.preprocessing.noop.html  photon_mosaic.rules.preprocessing.html  photon_mosaic.rules.suite2p_run.html  photon_mosaic.s2p_options.html  photon_mosaic.snakemake_utils.html
calcium_imaging_automation/: __init__.py
calcium_imaging_automation/core/: app.py  pipeline.py  reader.py  writer.py
docs/: make_api_index.py
docs/source/: api_index.rst  conf.py  contributing.md  index.md  index.rst
examples/: debugging.py  example_usage.py  example_usage.sh
photon_mosaic/: __init__.py  cli.py  dataset_discovery.py  pathing.py  s2p_options.py  snakemake_utils.py
photon_mosaic/io/: scanimage_utils.py
photon_mosaic/preprocessing/: __init__.py  contrast.py  derotation.py  noop.py  registry.py  trimming.py
photon_mosaic/rules/: __init__.py  numcodecs_run.py  preprocessing.py  s2p_options.py  suite2p_run.py
photon_mosaic/workflow/: Snakefile  config.yaml  dff.smk  preprocessing.smk  suite2p.smk
tests/: README.md  conftest.py  test_data_factory.py  tree_helpers.py
tests/test_integration/: conftest.py  test_whole_workflow.py
tests/test_regression/: README.md  __init__.py  test_file_structure_regression.py
tests/test_unit/: test_cli.py  test_generate_readme.py  test_metadata.py
user_guide/: configuration.html  dataset_discovery.html  index.html  installation.html  preprocessing.html  snakemake_tutorial.html
workflow/: Snakefile  config.yaml  preprocessing.smk
workflow/resources/: datavzrd_config.yaml
(+13 files in other folders)
